# wildberries-analytics-api-parser

./: LICENSE  README.md  example.py  pyproject.toml
connections/database/: __init__.py
connections/database/models/: analytics.py
connections/database/requests/analytic/: crud.py
connections/wildberries/: __init__.py  api.py  base.py
