[tool.poetry]
name = "analytics-api-parser"
version = "0.1.0"
description = ""
authors = ["alexturkin <alexturkinjob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
backoff = "^2.2.1"
aiohttp = "^3.9.5"
ujson = "^5.10.0"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.30"
fake-useragent = "^1.5.1"
pandas = "^2.2.2"
xlrd = "^2.0.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
